--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,4 +4,6 @@
 By <a href="https://github.com/njsch">Nathaniel Schmidt</a></p>
 <p>14.02.2022<br/>
 by <a href="https://github.com/jakubl7545">Jakub Lukowicz</a>.</p>
+<p>02/05/2014<br/>
+by <a href="https://github.com/ajirving">Alastair Irving</a>.</p>
 </footer>
